# sysyc

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  format.sh
libsysy/: Makefile  sylib.c  sylib.h
libsysy-arm/include/: sysy.h
scripts/: deploy.sh  merge.py  split.py
src/: CMakeLists.txt  main.cc
src/backend/: CMakeLists.txt  arm_basic.cc  arm_func.cc  backend.cc  backend_test.cc  builder.cc  instr_select.cc  reg_alloca.cc
src/comm/: CMakeLists.txt  builtin.cc  dbg.cc
src/frontend/: CMakeLists.txt  ast.cc  ast_test.cc  ast_to_ir.cc  ast_to_ir_test.cc  ast_to_ir_tool.cc  ast_type.cc  parse_ast_tool.cc  parser.cc  semantic_check.cc  semantic_check_test.cc  sysy.l  sysy.lex.cc  sysy.lex.h  sysy.tab.cc  sysy.tab.h  sysy.yy  sysy_lexer_test.cc  sysy_parser_test.cc
src/include/: backend.h  builtin.hpp  dbg.hpp  error.h  frontend.h  parser.h  type.h  type_utils.h  utils.h
src/include/ast/: ast.hpp  type.h
src/include/ir/: init.h  ir.hpp  type.h  value.h
src/include/opt/: opt.h
src/ir/: CMakeLists.txt  ir.cc  ir.l  ir.lex.cc  ir.lex.h  ir_lex_test.cc  ir_test.cc  irparser.cc  location.h  parser.cc  parser.h  parser_test.cc  token.h
src/opt/: CMakeLists.txt  active_variable_analysis.cc  build_dtree.cc  constant.cc  dead_code_elimination.cc  gvn.cc  init_bb_ptr.cc  mem2reg.cc  opt_tool.cc  optmgr.cc  zero_one_elimination.cc
src/perf/: graph.py  perf.py  testcases.json
src/tool/: json2dot.py
test/: comm.sh  exclude.list  gcov-clear.sh  gcov-coverage.sh  lines.sh  test_all.sh  test_ast.sh  test_ast_to_ir.sh  test_backend.sh  test_functional.sh  test_ir.sh  test_main.sh  test_ssa.sh
